<resources>
    <string name="app_name">Музыкайф</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="entry_et">Введите номер телефона</string>
    <string name="entry_btn">Войти</string>
    <string name="download">Загрузка...</string>
    <string name="nav_timetable">Расписание</string>
    <string name="nav_classes">Занятия</string>
    <string name="nav_news">Новости</string>
    <string name="nav_info">Наши преподаватели</string>
    <string name="nav_contact">Контакты</string>
    <string name="nav_exit">Выход</string>
</resources>
