<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_timetable"
            android:title="@string/nav_timetable"
            android:checked="true"/>
        <!--android:icon="@drawable/ic_menu_camera"-->
        <item
            android:id="@+id/nav_course"
            android:title="@string/nav_classes" />
        <item
            android:id="@+id/nav_news"
            android:title="@string/nav_news" />
        <item
            android:id="@+id/nav_info"
            android:title="@string/nav_info" />
        <item
            android:id="@+id/nav_contact"
            android:title="@string/nav_contact" />
        <item
            android:id="@+id/nav_exit"
            android:title="@string/nav_exit" />
    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
